--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Text-Utils : Word Counter, letter Counter, Copy Text, UpperCase, LowerCase, Clear Text, Reading Time, Remove Extra Spaces"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Text-Utils</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
